# cada2d

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  arc.cc  bbox.cc  bspline.cc  cada_color.h  cada_dimension.h  cada_math.h  cada_ns.h  cada_shape.h  cadsa.h  cadsa_shape.h  circle.cc  ellipse.cc  intcurvecurve.cc  intcurvecurve.h  line.cc  mat.cc  math.cc  meson.build  meson_options.txt  point.cc  pointstobspline.h  polyline.cc  ray.cc  shape.cc  shape.h  triangle.cc  vec2d.cc  vec3d.cc  xline.cc
algorithm/: algorithm.cc  algorithm_help.h  angle.cc  apollonius.cc  boundingbox.cc  boundingbox.h  direction.cc  distance.cc  distance.cpp  distance.h  equal.cc  flip.cc  flip.h  intcurvecurve.cc  intcurvecurve.h  intersection.cc  length.cc  length.h  meson.build  mirror.cc  mirror.h  move.cc  move.h  offset.cc  offset.h  pointonshape.cc  pointonshape.h  pointstobspline.cc  pointstobspline.h  polylinecontains.cc  reverse.cc  rotate.cc  roundallcorners.h  scale.cc  scale.h  self-intersection.cc  shortest_to.cc  shortest_to.h  side.cc  split.cc  (+6 more)
apollonius/: README  apo.h  apo_foundation.c  apo_foundation.h  apollonius.c  apollonius.h  circle.c  line.c  meson.build  point.c
capi/: CMakeLists.txt  cada2d_c.cc  cada2d_capi.h  cada_c.h  cada_capi.cpp
examples/: CMakeLists.txt  algorithm_intersection_example.cpp  algorithm_move_example.cpp  algorithm_offset_example.cpp  algorithm_onshape_example.cpp  algorithm_trim_example.cpp  shape_base_method_example.cpp  shape_factory_example.cpp
foundation/: foundation.c  foundation.h
include/: CMakeLists.txt  cada_algorithm.h  cada_dimension.h  cada_excption.h  cada_math.h  cada_ns.h  cada_shape.h  meson.build
include/cada2d/: RArc.h  RBox.h  RCircle.h  REllipse.h  RExplodable.h  RLine.h  RMath.h  RMatrix2x2.h  RPoint.h  RPolyline.h  RRay.h  RS.h  RShape.h  RShapeAlgorithm.h  RSpline.h  RVector.h  RXLine.h  cada_shape.h  exports.h  version.h.in
include/cada2d/private/: RShapePrivate.h
index/: meson.build  rtree.c  rtree.h
polyline/: arraylist.c  arraylist.h  meson.build  polyline.c  polyline.h  quickindex.c  quickindex.h  spatialindex.c  spatialindex.h
shape/: arc.cc  bbox.cc  bspline.cc  circle.cc  ellipse.cc  line.cc  math.cc  meson.build  plane.cc  point.cc  polyline.cc  ray.cc  regularpolygon.cc  shape.cc  shape_algorithm_extern.inl  shapefactory.cc  spline.cc  triangle.cc  vec2d.cc  vec3d.cc  xline.cc
src/: CMakeLists.txt  RArc.cpp  RBox.cpp  RCircle.cpp  REllipse.cpp  RLine.cpp  RMath.cpp  RPoint.cpp  RPolyline.cpp  RRay.cpp  RShape.cpp  RShapeAlgorithm.cpp  RSpline.cpp  RVector.cpp  RXLine.cpp
src/algorithm/: algorithm.cc  algorithm_help.h  boundingbox.cc  direction.cc  meson.build  offset.cc  pointonshape.cc  rotate.cc  scale.cc  stretch.cc  trim.cc  vectorto.cc
src/private/: RShapePrivate.cpp
test/: meson.build
test/shape/: arcTest.cpp
tests/: meson.build
tests/shape/: arcTest.cpp
tg/: tg.h
tools/: CMakeLists.txt  breve_tool.cpp  round_tool.cpp  shape_algorithm.cpp  shape_algorithm.h
