algorithm_src = files(
    'algorithm.cc',
    'angle.cc',
    'apollonius.cc',
    'boundingbox.cc',
    'distance.cc',
    'equal.cc',
    'flip.cc',
    'intersection.cc',
    'length.cc',
    'mirror.cc',
    'move.cc',
    'offset.cc',
    'pointonshape.cc',
    'pointstobspline.cc',
    'rotate.cc',
    'roundallcorners.cc',
    'scale.cc',
    'self-intersection.cc',
    'split.cc',
    'stretch.cc',
    'trim.cc',
    'vectorto.cc',
)