algorithm_src = files(
    'algorithm.cc',
    'angle.cc',
    'apollonius.cc',
    'boundingbox.cc',
    'direction.cc',
    'distance.cc',
    'equal.cc',
    'flip.cc',
    'intersection.cc',
    'length.cc',
    'mirror.cc',
    'move.cc',
    'offset.cc',
    'pointonshape.cc',
    'pointstobspline.cc',
    'reverse.cc',
    'rotate.cc',
    'roundallcorners.cc',
    'scale.cc',
    'self-intersection.cc',
    'side.cc',
    'split.cc',
    'stretch.cc',
    'trim.cc',
    'vectorto.cc',
)
