file(GLOB_RECURSE _tool_files ${CMAKE_CURRENT_LIST_DIR}/*.cpp)
foreach(_tool_file ${_tool_files})
    get_filename_component(file_name ${_tool_file} NAME)
    string(REGEX REPLACE "\\.cpp$" "" file_basename ${file_name} )
    message("file_basename=${file_basename}")
    add_executable(${file_basename} ${file_name})
    target_link_libraries(${file_basename} PRIVATE cada2d)
endforeach()
unset(_tool_files)
